# app_projects

./: .gitmodules  pyproject.toml
projects/py/: Taskfile.yml  pyproject.toml
projects/py/projects/airplane_simple_chatbot/: pyproject.toml
projects/py/projects/airplane_simple_chatbot/src/airplane_simple_chatbot/: __init__.py  main.py
projects/py/projects/airplane_simple_retriever/: appdeps.toml  pyproject.toml
projects/py/projects/airplane_simple_retriever/notebooks/: observation.ipynb  test.ipynb  test.txt
projects/py/projects/airplane_simple_retriever/src/airplane_simple_retriever/: __init__.py  main.py
src/app_projects/: __init__.py
workspaces/: airplane_simple_chatbot.code-workspace  py_projects.code-workspace  pyapp.code-workspace
