[project]
name = "app-projects"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "parsa", email = "parsa.miraghaie@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
app-projects = "app_projects:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
