[project]
name = "airplane_simple-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "parsa", email = "parsa.miraghaie@gmail.com" }]
requires-python = ">=3.12"
dependencies = ["airplane_simple_retriever"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
airplane_simple_retriever = { path = "../airplane_simple_retriever", editable = true }
