[project]
name = "airplane_simple_retriever"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "parsa", email = "parsa.miraghaie@gmail.com" }]
requires-python = ">=3.12"
dependencies = ["pyapp"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
pyapp = { path = "../../../../app/pyapp", editable = true }
