[project]
name = "airplane_simple_retriever"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "parsa", email = "parsa.miraghaie@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.2.2",
    "lancedb>=0.22.0",
    "langchain-openai>=0.3.16",
    "pyapp[local-langchain]",
]

[project.scripts]
generate = "airplane_simple_retriever.main:generate"
inference = "airplane_simple_retriever.main:inference"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
pyapp = { path = "../../../../app/pyapp", editable = true }

[dependency-groups]
dev = ["ipykernel>=6.29.5"]
